<resources>
    <string name="app_name">Daily Ride</string>
    <string name="facebook_app_id">1429320290712211</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string name="no_number_symbol">s/n</string>
    <string name="day_sunday">DOM</string>
    <string name="day_monday">SEG</string>
    <string name="day_tuesday">TER</string>
    <string name="day_wednesday">QUA</string>
    <string name="day_thursday">QUI</string>
    <string name="day_friday">SEX</string>
    <string name="day_saturday">SAB</string>
    <string name="new_request_create_request">Você ainda não pediu carona. Peça agora!</string>
    <string name="request_user_offering_ride">está lhe oferecendo carona</string>
    <string name="request_accepted_driver">aceitou seu pedido de carona</string>
    <string name="request_open_requests_rejected">Seus pedidos não foram aceitos.</string>
    <string name="request_open_searching_new_matches">Estamos buscando outras caronas pra você.</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_history">Histórico</string>
    <string name="menu_receivables">Recebimento</string>
    <string name="menu_payment">Pagamento</string>
    <string name="payment_save">Salvar</string>
    <string name="credit_card_number">número</string>
    <string name="credit_card_edit">Alterar</string>
    <string name="payment_cancel">Cancelar</string>
    <string name="credit_card_save">Salvar</string>
    <string name="menu_ratings">Avaliações</string>
    <string name="menu_customer_service">Fale conosco</string>
    <string name="request_create_request_now">Peça carona agora!</string>
    <string name="new_request_searching_rides">Buscando caronas...</string>
    <string name="offer_no_requests">Buscando passageiros...</string>
    <string name="offer_will_notify_you">Não se preocupe! Avisaremos logo que o primeiro surgir!</string>
    <string name="button_create_request">Pedir carona</string>
    <string name="button_create_offer">Oferecer carona</string>
    <string name="button_create_request_short">Pedir</string>
    <string name="offer_fill_data">Complete as informações da sua carona</string>
    <string name="offer_leaving_address_label">Local de saída</string>
    <string name="arriving_address_label">Destino</string>
    <string name="insert_leaving_address">Inserir local de saída</string>
    <string name="string_leaving_address">Inserir destino</string>
    <string name="insert_time">Definir data e hora de saída</string>
    <string name="activity_ride_title">Caronas</string>
    <string name="activity_title_offer">Oferta de carona</string>
    <string name="activity_title_request">Pedido de carona</string>
    <string name="activity_ride_create_request">Pedir</string>
    <string name="time_set">Definir</string>
    <string name="activity_title_time">Data e hora de saída</string>
    <string name="tomorrow">Amanhã</string>
    <string name="today">Hoje</string>
    <string name="ok">OK</string>
    <string name="time_earlier_than_now">O horário escolhido já passou</string>
    <string name="leaving_time_today">Hoje, às %1$s</string>
    <string name="leaving_time_tomorrow">Amanhã, às %1$s</string>
    <string name="leaving_time_general">%1$s, às %2$s</string>
    <string name="type_address_or_place">digite o endereço ou nome do local</string>
    <string name="address_add_number">Complete com o número e confirme</string>
    <string name="address_generic_address">Seja mais preciso. Este endereço é muito generico.</string>
    <string name="offer_arriving_address_label">Destino</string>
    <string name="activity_slave_offer">Oferecer carona</string>
    <string name="activity_offer_details">Oferta de carona</string>
    <string name="menu_edit">Alterar</string>
    <string name="menu_cancel">Cancelar</string>
    <string name="activity_chat">Chat</string>
    <string name="button_accept">Aceitar</string>
    <string name="user_wants_a_ride">%1$s quer uma carona</string>
    <string name="activity_offer_invite">Encontramos uma carona</string>
    <string name="activity_request_details_accepted">Carona confirmada</string>
    <string name="notification_user_wants_a_ride">%1$s quer uma carona</string>
    <string name="slave_offer_user_wants_a_ride">%1$s quer uma carona</string>
    <string name="slave_offer_datetime">%1$s às %2$s</string>
    <string name="slave_offer_meets_at">Encontra %1$s em</string>
    <string name="slave_offer_leaving_address">%1$s às %2$s</string>
    <string name="slave_offer_meets_address">%1$s às %2$s</string>
    <string name="slave_offer_drops_at">Deixa %1$s em</string>
    <string name="offer_details_ride_date_time">%1$s, saindo às %2$s</string>
    <string name="offer_details_no_invites_accepted">Nenhuma confirmação por enquanto.</string>
    <string name="offer_details_no_invites_waiting_confirmation">Nenhuma oferta à confirmar por enquanto.\nEstamos buscando mais passageiros. </string>
    <string name="offer_details_finding_riders">Ainda não encontramos passageiros. Fique tranquilo, assim que encontrarmos avisaremos você.</string>
    <string name="offer_details_and_conjuction">e</string>
    <string name="offer_details_waiting_acceptance">Aguardando confirmações</string>
    <string name="activity_rides_and_conjunction">e</string>
    <string name="notification_driver_is_offering_a_ride">%1$s está oferecendo uma carona</string>
    <string name="request_invite_confirm_presentation">%1$s está lhe oferecendo carona</string>
    <string name="request_invite_confirm_month_day">%1$s de %2$s</string>
    <string name="activity_request_details_looking_for_driver">Buscando caronas</string>
    <string name="request_details_will_give_you_a_ride">%1$s te dará carona</string>
    <string name="notification_rider_accepted_invite">%1$s aceitou sua carona</string>
    <string name="own_profile_add_phone">adicione seu telefone</string>
    <string name="own_profile_fb_no_friends">Nenhum amigo</string>
    <string name="own_profile_add_work">adicione seu trabalho</string>
    <string name="own_profile_add_school">adicione sua universidade</string>
    <string name="fragment_email_hint">%1$s@seutrabalho.com</string>
    <string name="add_work_fragment_email_hint">%1$s@seutrabalho.com.br</string>
    <string name="add_school_fragment_email_hint">%1$s@universidade.com.br</string>
    <string name="activity_add_work_email">Adicionar trabalho</string>
    <string name="email_confirmation_pin_wrong">O código não confere. Por favor verifique novamente.</string>
    <string name="menu_recurrent_rides">Caronas Recorrentes</string>
    <string name="welcome_enter">ENTRAR</string>
    <string name="welcome_next">PRÓXIMO</string>
    <string name="chat_user_added">%1$s entrou nesta carona</string>
    <string name="sign_up_first_name">Nome</string>
    <string name="sign_up_last_name">Sobrenome</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Senha</string>
    <string name="sign_up_phone">Celular</string>
    <string name="sign_up_done">Cadastrar</string>
    <string name="activity_sign_up">Cadastro</string>
    <string name="sign_up_first_name_error">obrigatório</string>
    <string name="sign_up_last_name_error">obrigatório</string>
    <string name="sign_up_email_error_empty">obrigatório</string>
    <string name="sign_up_email_error_invalid">email inválido</string>
    <string name="sign_up_password_error">pelo menos 6 caracteres</string>
    <string name="sign_up_phone_error_empty">obrigatório</string>
    <string name="sign_up_number_error_invalid">número inválido</string>
    <string name="no_internet_error">Sem accesso a internet. Verifique sua conexão e tente novamente.</string>
    <string name="request_unexpected_error">Aconteceu um erro inesperado. Tente novamente mais tarde ou entre em contato com a gente pelo support@dailyrideapp.com.</string>
    <string name="request_server_error">Não foi possível processar sua solicitação no momento. Por favor tente novamente mais tarde.</string>
    <string name="dingo_err_10">Este email já está cadastrado. Volte e faça o login.</string>
    <string name="dingo_err_11">Este email já foi cadastrado utilizando o Facebook. Volte e entre com o Facebook.</string>
    <string name="dingo_err_12">Este celular já está associado à outra conta.</string>
    <string name="activity_confirm_registration">Verificação de Cadastro</string>
    <string name="dingo_err_20">Código incorreto. Por favor verifique e tente novamente.</string>
    <string name="sign_up_confirm_back">Deseja abandonar este cadastro e voltar à tela inicial?</string>
    <string name="main_login_email_enter">Insira seu email para prosseguir.</string>
    <string name="main_login_email_invalid">O formato do email é ínvalido. Corrija e tente novamente.</string>
    <string name="main_login_password_enter">Insira sua senha para prosseguir.</string>
    <string name="main_login_wrong_credentials">Dados não conferem. Verique seu email e senha e tente novamente.</string>
    <string name="sign_up_confirmation_code_enter">Insira o código recebido por SMS para prosseguir.</string>
    <string name="profile_phone_confirmed">Telefone verificado</string>
    <string name="profile_school_add">insira sua universidade</string>
    <string name="profile_entity_pending">enviado para aprovação</string>
    <string name="profile_entity_denied">não foi possível aprovar seus documentos,\nenvie-os novamente por gentileza</string>
    <string name="profile_entity_approved">foi verificado e está visível para outros usuários</string>
    <string name="profile_work_add">insira seu local de trabalho</string>
    <string name="profile_phone_confirmed_subtitle">não aparece para os outros usuários</string>
    <string name="profile_phone_add">insira seu celular</string>
    <string name="add_email_already_being_used">Este email já está sendo utilizado por outra conta.</string>
    <string name="code_fragment_pin_too_short">O código tem pelo menos 6 dígitos.</string>
    <string name="add_email_entity_name_too_short">Por gentileza, use um nome mais descritivo para que possamos identificar sua empresa</string>
    <string name="support_send_email">Envie-nos um email em support@dailyrideapp.com.</string>
    <string name="activity_add_school_email">Adicionar universidade</string>
    <string name="menu_logoff">Sair desta conta</string>
    <string name="add_school_fragment_email_header">Insira seu email institucional vinculado à sua universidade</string>
    <string name="add_school_fragment_name_header">Qual o nome da sua universidade?</string>
    <string name="add_school_fragment_credentials_header">Precisamos que você nos envie uma foto da sua cateirinha de estudante ou outro documento que comprove seu vínculo com esta universidade</string>
    <string name="add_work_fragment_email_header">Insira o email do seu trabalho</string>
    <string name="add_work_fragment_name_header">Qual o nome da sua empresa?</string>
    <string name="add_work_fragment_credentials_header">Precisamos que você nos envie uma foto do seu crachá ou outro documento que comprove seu vínculo com esta empresa</string>
    <string name="activity_ride_recurrent_title">Caronas recorrentes</string>
    <string name="create_ride_arriving_address_fill">Insira o endereço de destino para prosseguir,</string>
    <string name="create_ride_leaving_address_fill">Insira o endereço do local de saída para prosseguir</string>
    <string name="create_ride_time_passed">O horário escolhido já passou.</string>
    <string name="finding_rides">Estamos buscando caronas pra você. Avisaremos logo que encontrarmos,</string>
    <string name="menu_delete">Deletar</string>
    <string name="ride_request_cancel_warning">Cancelamentos fazem você ter menor prioridade para pedir suas próximas caronas.\n\nTem certeza que deseja cancelar esta carona?</string>
</resources>