<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_actionbar" />

    <ImageView
        android:id="@+id/flag_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/credit_card_number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/expiration_month"
            android:maxLength="2"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/expiration_year"
            android:maxLength="2"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/cvv"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/cancel"
        android:text="@string/payment_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <Button
        android:id="@+id/save"
        android:text="@string/payment_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>