<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_drawer"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/turquoise">

        <ImageView
            android:id="@+id/user_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:padding="5dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_user_photo_border_oval"
            />

        <TextView
            android:id="@+id/user_name"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/drawer_user_name"
            android:text="Vinicius Silva"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/profile_item"
            android:onClick="onNavDrawerItemClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_icon"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/profile_text"
                android:text="@string/menu_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/turquoise_dark"
                android:textSize="@dimen/drawer_item"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/payment_item"
            android:onClick="onNavDrawerItemClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/payment_icon"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/payment_text"
                android:text="@string/menu_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/turquoise_dark"
                android:textSize="@dimen/drawer_item"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/receivables_item"
            android:onClick="onNavDrawerItemClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/receivables_icon"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/receivables_text"
                android:text="@string/menu_receivables"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/turquoise_dark"
                android:textSize="@dimen/drawer_item"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_item"
            android:onClick="onNavDrawerItemClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/history_icon"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/history_text"
                android:text="@string/menu_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/turquoise_dark"
                android:textSize="@dimen/drawer_item"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ratings_item"
            android:onClick="onNavDrawerItemClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ratings_icon"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/ratings_text"
                android:text="@string/menu_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/turquoise_dark"
                android:textSize="@dimen/drawer_item"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/_item"
            android:onClick="onNavDrawerItemClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/customer_service_icon"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/customer_service_text"
                android:text="@string/menu_customer_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/turquoise_dark"
                android:textSize="@dimen/drawer_item"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>