<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="15dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/type_background"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@drawable/shape_ride_recurrent_item_type_background"
            android:gravity="center"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/type_icon"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="@drawable/shape_ride_recurrent_item_info_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/day_sunday"
                    android:layout_margin="2dp"
                    android:background="@drawable/shape_day_button_recurrent_ride"
                    android:textColor="@color/white"
                    android:layout_width="@dimen/recurrent_list_day_button_size"
                    android:layout_height="@dimen/recurrent_list_day_button_size"
                    android:text="@string/day_sunday"
                    android:textSize="@dimen/day_button_text_size"
                    />
                <Button
                    android:id="@+id/day_monday"
                    android:layout_margin="2dp"
                    android:background="@drawable/shape_day_button_recurrent_ride"
                    android:textColor="@color/white"
                    android:layout_width="@dimen/recurrent_list_day_button_size"
                    android:layout_height="@dimen/recurrent_list_day_button_size"
                    android:text="@string/day_monday"
                    android:textSize="@dimen/day_button_text_size"
                    />
                <Button
                    android:id="@+id/day_tuesday"
                    android:layout_margin="2dp"
                    android:background="@drawable/shape_day_button_recurrent_ride"
                    android:textColor="@color/white"
                    android:layout_width="@dimen/recurrent_list_day_button_size"
                    android:layout_height="@dimen/recurrent_list_day_button_size"
                    android:text="@string/day_tuesday"
                    android:textSize="@dimen/day_button_text_size"
                    />
                <Button
                    android:id="@+id/day_wednesday"
                    android:layout_margin="2dp"
                    android:background="@drawable/shape_day_button_recurrent_ride"
                    android:textColor="@color/white"
                    android:layout_width="@dimen/recurrent_list_day_button_size"
                    android:layout_height="@dimen/recurrent_list_day_button_size"
                    android:text="@string/day_wednesday"
                    android:textSize="@dimen/day_button_text_size"
                    />
                <Button
                    android:id="@+id/day_thursday"
                    android:layout_margin="2dp"
                    android:background="@drawable/shape_day_button_recurrent_ride"
                    android:textColor="@color/white"
                    android:layout_width="@dimen/recurrent_list_day_button_size"
                    android:layout_height="@dimen/recurrent_list_day_button_size"
                    android:text="@string/day_thursday"
                    android:textSize="@dimen/day_button_text_size"
                    />
                <Button
                    android:id="@+id/day_friday"
                    android:layout_margin="2dp"
                    android:background="@drawable/shape_day_button_recurrent_ride"
                    android:textColor="@color/white"
                    android:layout_width="@dimen/recurrent_list_day_button_size"
                    android:layout_height="@dimen/recurrent_list_day_button_size"
                    android:text="@string/day_friday"
                    android:textSize="@dimen/day_button_text_size"
                    />
                <Button
                    android:id="@+id/day_saturday"
                    android:layout_margin="2dp"
                    android:background="@drawable/shape_day_button_recurrent_ride"
                    android:textColor="@color/white"
                    android:layout_width="@dimen/recurrent_list_day_button_size"
                    android:layout_height="@dimen/recurrent_list_day_button_size"
                    android:text="@string/day_saturday"
                    android:textSize="@dimen/day_button_text_size"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/padding_quarter"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:textColor="@color/gray_dark"
                    android:text="às"/>

                <TextView
                    android:id="@+id/time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_quarter"
                    android:text="16:00"
                    android:textSize="22sp"
                    android:textColor="@color/gray_dark"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/padding_half">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="38dp"
                    android:src="@drawable/route_icon"
                    android:layout_gravity="center_vertical"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="4dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/leaving_address"
                        android:text="Av Pe Antonio Jose dos Santos, 1666"
                        android:textColor="@color/gray_dark"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/arriving_address"
                        android:text="Unilever Sao Paulo"
                        android:textSize="14sp"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/gray_dark"/>

                </LinearLayout>



            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

</LinearLayout>